# meta-learning

./: CHANGELOG.md  COMPREHENSIVE_COMPETITIVE_ANALYSIS.md  FEATURE_PORTING_ANALYSIS.md  IMPLEMENTATION_PLAN.md  MODULARIZATION_GUIDE.md  MODULARIZATION_PLAN.md  MODULARIZATION_SUMMARY.md  README.md  TEST_SUMMARY.md  benchmark_new_features.py  check_lr_identity.py  debug_gradient_correctness.py  debug_gradient_flow.py  debug_meta_sgd_lrs.py  debug_ridge_gradients.py  demo_hardware_acceleration.py  demo_simple.py  demo_visualization_engine.py  fast_benchmark.py  meta_learning_function_inventory.json  meta_learning_implementations_guide.py  meta_learning_methods_demo.py  meta_learning_v2.py  meta_learning_validation_test.py  pyproject.toml  run_new_tests.py  simple_5min_demo.py  simple_meta_sgd_test.py  smoke_test_math.py  temp_core_predictor.py  temp_scaler_class.py  test_advanced_math_standalone.py  test_advanced_math_utils.py  test_algorithm_integration.py  test_anil_standalone.py  test_anil_standalone_fixed.py  test_cifar_fs_loader.py  test_core_utils.py  test_difficulty_patcher_standalone.py  test_download_complete.py  (+27 more)
meta_learning/: __init__.py  bench.py  cli.py  continual_meta_learning.py  data.py  eval.py  hardware_utils.py  leakage_guard.py
tests/: conftest.py  test_adaptive_episode_sampler.py  test_advanced_math_utils.py  test_auto_download_datasets.py  test_balanced_task_generator.py  test_basic_functionality.py  test_bn_policy.py  test_cli_comprehensive.py  test_cli_synthetic.py  test_comprehensive_integration.py  test_continual_meta_learning_coverage.py.disabled  (+52 more)
(+205 files in other folders)
