[project]
name = "meta-learning-toolkit"
version = "3.0.0"
description = "Meta-learning toolkit (v3): real datasets (CIFAR-FS), Conv4 encoder, reproducible evaluation."
readme = "README.md"
license = {text = "MIT"}
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.9"
dependencies = ["torch>=2.2", "numpy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "isort", "mypy", "mkdocs-material"]
data = ["torchvision>=0.16", "pillow>=9.0"]

[project.scripts]
mlfew = "meta_learning.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
